data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1247.wast
;; 8. **Test: Loop with Call to Exported Function Modifying Local Stack**    Description: Construct a loop that calls an exported function which modifies its local operand stack. Ensure that the control flow resumes correctly within the loop and the operand stack is properly synchronized.    Constraints:    - Verify consistent stack handling between loop and function.    - Ensure correct function signature for stack modification.    - Validate resumption of loop execution with synchronized stack.

(assert_invalid
  (module
    (func $modify_stack (param i32) (result i32)
      local.get 0
      i32.const 1
      i32.add
    )
    (func $test_loop_with_call (param i32) (result i32)
      local.get 0
      loop (param i32) (result i32)
        call $modify_stack
        br_if 0
      end
    )
    (export "test_loop_with_call" (func $test_loop_with_call))
  )
  "type mismatch"
)